--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
                         </p>
                         <!----------------------------------->
                     </div>
+
+                    <!------- Expand slide button ------->
+                    <button class="expand-slide-btn">See drink</button>
+                    <!----------------------------------->
                 </div>
                 <!----------------------------------->
 
@@ -143,6 +147,9 @@
                         </p>
                         <!----------------------------------->
                     </div>
+
+                    <!------- Expand slide button ------->
+                    <button class="expand-slide-btn">See drink</button>
                     <!----------------------------------->
                 </div>
                 <!----------------------------------->
@@ -166,6 +173,9 @@
                         </p>
                         <!----------------------------------->
                     </div>
+
+                    <!------- Expand slide button ------->
+                    <button class="expand-slide-btn">See drink</button>
                     <!----------------------------------->
                 </div>
                 <!----------------------------------->
@@ -193,6 +203,9 @@
                         </p>
                         <!----------------------------------->
                     </div>
+
+                    <!------- Expand slide button ------->
+                    <button class="expand-slide-btn">See drink</button>
                     <!----------------------------------->
                 </div>
                 <!----------------------------------->
@@ -368,7 +381,7 @@
             <!------------- Slider -------------->
             <div class="slider">
                 <!------ Previous slide button ------>
-                <button class="action-button special-action-button prev" aria-label="Previous slide">
+                <button class="action-button special-action-button prev" aria-label="previous slide">
                     <i class="fa fa-chevron-left" aria-hidden="true"></i>
                 </button>
                 <!----------------------------------->
@@ -382,7 +395,7 @@
                 <!----------------------------------->
 
                 <!-------- Next slide button -------->
-                <button class="action-button special-action-button next" aria-label="Next slide">
+                <button class="action-button special-action-button next" aria-label="next slide">
                     <i class="fa fa-chevron-right" aria-hidden="true"></i>
                 </button>
                 <!----------------------------------->
@@ -396,14 +409,14 @@
     <!---- Scrolling control buttons ---->
     <section class="controls">
         <!-------- Scroll top button -------->
-        <button data-action="top" class="action-button scrollBtn" title="Go to top"
+        <button data-action="top" class="action-button scroll-btn" title="Go to top"
             aria-label="Go to the top of the page">
             <i class="fa fa-chevron-up" aria-hidden="true"></i>
         </button>
         <!----------------------------------->
 
         <!------- Scroll bottom button ------>
-        <button data-action="bottom" class="action-button scrollBtn active" title="Go to bottom"
+        <button data-action="bottom" class="action-button scroll-btn active" title="Go to bottom"
             aria-label="Go to the bottom of the page">
             <i class="fa fa-chevron-down" aria-hidden="true"></i>
         </button>
