--- a/index.html
+++ b/index.html
@@ -326,6 +326,10 @@
                         </p>
                         <!----------------------------------->
                     </div>
+
+                    <!------- Expand slide button ------->
+                    <button class="expand-slide-btn special-one">See drink</button>
+                    <!----------------------------------->
                 </div>
                 <!----------------------------------->
 
@@ -350,6 +354,10 @@
                         </p>
                         <!----------------------------------->
                     </div>
+
+                    <!------- Expand slide button ------->
+                    <button class="expand-slide-btn special-two">See drink</button>
+                    <!----------------------------------->
                 </div>
                 <!----------------------------------->
 
@@ -373,6 +381,10 @@
                         </p>
                         <!----------------------------------->
                     </div>
+
+                    <!------- Expand slide button ------->
+                    <button class="expand-slide-btn special-three">See drink</button>
+                    <!----------------------------------->
                 </div>
                 <!----------------------------------->
             </div>
