Implemented a modal for the showcase section

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <section class="showcase">
             <div class="section-title-container">
                 <!--------- Showcase title ---------->
-                <h3 class="section-title">Welcome to <span class="highlight-one">The Coffee Shop</span>!</h3>
+                <h2 class="section-title">Welcome to <span class="highlight-one">The Coffee Shop!</span></h2>
                 <!----------------------------------->
             </div>
 
@@ -481,6 +481,79 @@
             <!----------------------------------->
         </nav>
     </footer>
+    <!----------------------------------->
+
+    <!------------- Modal --------------->
+    <div id="drinkModal" class="modal">
+        <!--------- Modal content ----------->
+        <div class="modal-content">
+            <!------- Close modal button -------->
+            <button class="close-modal-btn"><i class="fa fa-close"></i></button>
+            <!----------------------------------->
+
+            <!---------- Drink title ------------>
+            <h2 class="modal-title"><i class="fa fa-coffee"></i> Cappuccino</h2>
+            <!----------------------------------->
+
+            <div class="drink-content">
+                <!--------- Drink images ------------>
+                <div class="drink-images">
+                    <img src="./assets/cappuccino.png" alt="cappuccino photo one">
+                    <img src="./assets/cappuccino-2.jpg" alt="cappuccino photo two">
+                    <img src="./assets/cappuccino-3.jpg" alt="cappuccino photo three">
+                    <img src="./assets/cappuccino-4.jpg" alt="cappuccino photo four">
+                </div>
+                <!----------------------------------->
+
+                <!------- Drink description --------->
+                <div class="drink-description">
+                    <p>
+                        Indulge in the timeless allure of the cappuccino, an iconic Italian masterpiece that tantalizes
+                        the
+                        senses with every sip. At <span class="highlight-two">The Coffee Shop</span>, we elevate this
+                        beloved classic to new heights, crafting
+                        cappuccinos that embody the essence of artisanal perfection.
+                    </p>
+
+                    <p>
+                        Prepare to embark on a sensory journey as you immerse yourself in the rich depths of our
+                        meticulously
+                        brewed espresso. Each velvety shot, sourced from the finest Arabica beans, delivers a symphony
+                        of
+                        bold flavors that dance across your palate with unrivaled intensity.
+                    </p>
+
+                    <p>
+                        But the magic doesn't stop there. Our skilled baristas expertly steam the freshest milk to silky
+                        perfection, infusing it with a delicate sweetness that complements the espresso's robust
+                        character.
+                        With precision and care, we pour this creamy elixir into the waiting embrace of the espresso,
+                        creating a harmonious union of coffee and milk that is nothing short of divine.
+                    </p>
+
+                    <p>
+                        As the final flourish, we crown your cappuccino with a luxurious layer of frothy milk foam,
+                        artfully
+                        sculpted to perfection. This luscious blanket of foam adds a tantalizing textural contrast,
+                        enveloping your senses in a velvety embrace that lingers long after your last sip.
+                    </p>
+
+                    <p>
+                        Whether you're seeking a morning pick-me-up or a luxurious afternoon indulgence, our cappuccinos
+                        offer a sublime balance of boldness and decadence. With each sip, you'll discover why the
+                        cappuccino
+                        has earned its place as a timeless classic, cherished by coffee aficionados around the world.
+                        Experience the magic of the cappuccino at <span class="highlight-two">The Coffee Shop</span>
+                        today.
+                    </p>
+                </div>
+                <!----------------------------------->
+
+
+            </div>
+        </div>
+        <!----------------------------------->
+    </div>
     <!----------------------------------->
 
     <!----------- JavaScript ------------>
