Implemented plans section cards

--- a/index.html
+++ b/index.html
@@ -453,8 +453,11 @@
         <section class="plans-section">
             <div class="plan-cards">
                 <div class="plan-card silver">
+                    <!----------- Card title ------------>
                     <h2 class="plan-card-title">Silver</h2>
+                    <!----------------------------------->
 
+                    <!------- Plan features list -------->
                     <ul class="plan-card-list">
                         <li>Special drinks <i class="fa fa-check"></i></li>
                         <li>Special discounts <i class="fa fa-check"></i></li>
@@ -463,13 +466,39 @@
                         <li>Free pastries and savories <i class="fa fa-times"></i></li>
                         <li>Include familiars or friends <i class="fa fa-times"></i></li>
                     </ul>
+                    <!----------------------------------->
 
-                    <img src="./assets/imgs/silver.jpg" alt="">
+                    <!---------- Card buttons ----------->
+                    <div class="plan-card-btns">
+                        <!----- Prices dropdown button ------>
+                        <button class="plan-card-btn drop-prices">
+                            <i class="fa fa-chevron-down"></i>&dollar;25
+                        </button>
+                        <!----------------------------------->
+
+                        <!----------- Buy button ------------>
+                        <button class="plan-card-btn buy-btn">Buy</button>
+                        <!----------------------------------->
+
+                        <!------- Add to cart button -------->
+                        <button class="plan-card-btn add-cart">
+                            <i class="fa fa-shopping-cart"></i>
+                        </button>
+                        <!----------------------------------->
+                    </div>
+                    <!----------------------------------->
+
+                    <!----------- Card image ------------>
+                    <img src="./assets/imgs/silver.jpg" alt="silver plan image">
+                    <!----------------------------------->
                 </div>
 
                 <div class="plan-card gold">
+                    <!----------- Card title ------------>
                     <h2 class="plan-card-title">Gold</h2>
+                    <!----------------------------------->
 
+                    <!------- Plan features list -------->
                     <ul class="plan-card-list">
                         <li>Special drinks <i class="fa fa-check"></i></li>
                         <li>Special discounts <i class="fa fa-check"></i></li>
@@ -479,13 +508,38 @@
                         <li>Include familiars or friends <i class="fa fa-times"></i></li>
                         <li></li>
                     </ul>
+                    <!----------------------------------->
 
-                    <img src="./assets/imgs/gold.jpg" alt="">
+                    <!---------- Card buttons ----------->
+                    <div class="plan-card-btns">
+                        <!----- Prices dropdown button ------>
+                        <button class="plan-card-btn drop-prices">
+                            <i class="fa fa-chevron-down"></i>&dollar;50
+                        </button>
+                        <!----------------------------------->
+
+                        <!----------- Buy button ------------>
+                        <button class="plan-card-btn buy-btn">Buy</button>
+                        <!----------------------------------->
+
+                        <!------- Add to cart button -------->
+                        <button class="plan-card-btn add-cart">
+                            <i class="fa fa-shopping-cart"></i>
+                        </button>
+                        <!----------------------------------->
+                    </div>
+                    <!----------------------------------->
+
+                    <!----------- Card image ------------>
+                    <img src="./assets/imgs/gold.jpg" alt="gold plan image">
+                    <!----------------------------------->
                 </div>
 
                 <div class="plan-card diamond">
                     <h2 class="plan-card-title">Diamond</h2>
+                    <!----------------------------------->
 
+                    <!------- Plan features list -------->
                     <ul class="plan-card-list">
                         <li>Special drinks <i class="fa fa-check"></i></li>
                         <li>Special discounts <i class="fa fa-check"></i></li>
@@ -494,8 +548,31 @@
                         <li>Free pastries and savories <i class="fa fa-check"></i></li>
                         <li>Include familiars or friends <i class="fa fa-check"></i></li>
                     </ul>
+                    <!----------------------------------->
 
-                    <img src="./assets/imgs/diamond.jpg" alt="">
+                    <!---------- Card buttons ----------->
+                    <div class="plan-card-btns">
+                        <!----- Prices dropdown button ------>
+                        <button class="plan-card-btn drop-prices">
+                            <i class="fa fa-chevron-down"></i>&dollar;100
+                        </button>
+                        <!----------------------------------->
+
+                        <!----------- Buy button ------------>
+                        <button class="plan-card-btn buy-btn">Buy</button>
+                        <!----------------------------------->
+
+                        <!------- Add to cart button -------->
+                        <button class="plan-card-btn add-cart">
+                            <i class="fa fa-shopping-cart"></i>
+                        </button>
+                        <!----------------------------------->
+                    </div>
+                    <!----------------------------------->
+
+                    <!----------- Card image ------------>
+                    <img src="./assets/imgs/diamond.jpg" alt="diamond plan image">
+                    <!----------------------------------->
                 </div>
             </div>
         </section>
