--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <link rel="stylesheet" href="./CSS/global/boilerplate.css">
     <link rel="stylesheet" href="./CSS/global/styles.css">
     <link rel="stylesheet" href="./CSS/global/custom-props.css">
+    <link rel="stylesheet" href="./CSS/global/media-queries.css">
     <link rel="stylesheet" href="./CSS/global/typography.css">
     <!----------------------------------->
 </head>
@@ -45,51 +46,65 @@
     <header>
         <!--------- Main navigation --------->
         <nav class="main-nav" aria-label="primary navigation">
-            <!-------- Navigation title --------->
-            <ul class="main-nav__branding">
-                <!---------- Website logo ----------->
-                <img class="main-nav__img-logo" src="./assets/imgs/logo.png" alt="Website logo: A cup of hot coffee.">
+            <!-------- Navigation wrapper --------->
+            <div class="main-nav__wrapper" id="primary-navigation">
+                <!-------- Navigation title --------->
+                <ul class="main-nav__branding">
+                    <!---------- Website logo ----------->
+                    <img class="main-nav__img-logo" src="./assets/imgs/logo.png"
+                        alt="Website logo: A cup of hot coffee.">
+                    <!----------------------------------->
+
+                    <!---------- Website title ---------->
+                    <h1><a href="./" class="main-nav__title">The Coffee Shop</a></h1>
+                    <!----------------------------------->
+                </ul>
                 <!----------------------------------->
 
-                <!---------- Website title ---------->
-                <h1><a href="./" class="main-nav__title">The Coffee Shop</a></h1>
+                <!--------- Hamburger menu ---------->
+                <button class="main-nav__hamburger-menu closed" aria-label="main navigation menu"
+                    aria-controls="primary-navigation" aria-expanded="false">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </button>
                 <!----------------------------------->
-            </ul>
+
+                <ul class="main-nav__list">
+                    <li class="main-nav__list-item">
+                        <a class="main-nav__link" href="./" aria-current="page" aria-label="Homepage">
+                            <i class="main-nav__icon fa fa-home" aria-hidden="true"></i>Home
+                        </a>
+                    </li>
+
+                    <li class="main-nav__list-item">
+                        <a class="main-nav__link" href="#" aria-label="Drinks menu page">
+                            <i class="main-nav__icon fa fa-cutlery" aria-hidden="true"></i>Menu
+                        </a>
+                    </li>
+
+                    <li class="main-nav__list-item">
+                        <a class="main-nav__link" href="#" aria-label="About page">
+                            <i class="main-nav__icon fa fa-info-circle" aria-hidden="true"></i>About
+                        </a>
+                    </li class="main-nav__list-item">
+
+                    <li class="main-nav__list-item main-nav__list-item--plans">
+                        <a class="main-nav__link main-nav__link--plans" href="#" aria-label="Plans page">
+                            <i class="main-nav__icon main-nav__icon--plans fa fa-diamond" aria-hidden="true"></i>Plans
+                        </a>
+                    </li>
+                </ul>
+
+                <div class="main-nav__btns">
+                    <button class="main-nav__btn main-nav__btn--login"><i class="fa fa-user"
+                            aria-hidden="true"></i></button>
+                    <button class="main-nav__btn main-nav__btn--cart"><i class="fa fa-shopping-cart"
+                            aria-hidden="true"></i></button>
+                </div>
+            </div>
             <!----------------------------------->
 
-            <!--------- Hamburger menu ---------->
-            <button class="main-nav__hamburger-menu closed" aria-label="main navigation menu"
-                aria-controls="primary-navigation" aria-expanded="false">
-                <i class="fa fa-bars" aria-hidden="true"></i>
-            </button>
-            <!----------------------------------->
+            <!--------- Login and cart ---------->
 
-            <!-------- Navigation links --------->
-            <ul class="main-nav__list" id="primary-navigation">
-                <li>
-                    <a href="./" aria-current="page" aria-label="Homepage">
-                        <i class="fa fa-home" aria-hidden="true"></i>Home
-                    </a>
-                </li>
-
-                <li>
-                    <a href="#" aria-label="Drinks menu page">
-                        <i class="fa fa-cutlery" aria-hidden="true"></i>Menu
-                    </a>
-                </li>
-
-                <li>
-                    <a href="#" aria-label="About page">
-                        <i class="fa fa-info-circle" aria-hidden="true"></i>About
-                    </a>
-                </li>
-
-                <li class="plans">
-                    <a href="#" aria-label="Plans page">
-                        <i class="fa fa-diamond" aria-hidden="true"></i>Plans
-                    </a>
-                </li>
-            </ul>
             <!----------------------------------->
         </nav>
         <!----------------------------------->
