Improved plans section

--- a/index.html
+++ b/index.html
@@ -479,6 +479,13 @@
 
         <!---------- Plans section ---------->
         <section class="plans-section">
+            <div class="section-title-container">
+                <!--------- Showcase title ---------->
+                <h2 class="section-title">Join us today and enjoy <span class="highlight-three">the best</span> coffee
+                    experience!</span></h2>
+                <!----------------------------------->
+            </div>
+
             <div class="plans-section__cards">
                 <div class="plans-section__card plans-section__card--silver-plan">
                     <!----------- Card title ------------>
